# dgov

./: .coverage  .gitattributes  .gitignore  .test-manifest.json  .venv  ADVECTION_BREAKTHROUGH.md  AGENT-POOL-REPORT.md  AGENTS.md  ARCH-REVIEW.md  ARCH_SPEC.md  AUDIT-CODEX.md  AUDIT-CONTEXT.md  AUDIT-EFFICIENCY.md  AUDIT-GEMINI.md  AUDIT-HOOKS.md  AUDIT-PHASE3.md  AUDIT-PLUMBING.md  AUDIT-SKILLS.md  AUDIT.md  BENCHMARKS.md  BUG-REPORT.md  BUGS.md  CLAUDE.md  CLEANUP.md  CODEBASE.md  CONTRIBUTING.md  CONVERGENCE_AUDIT.md  DAG-DAG-RUNNER.md  DAG-DASHBOARD.md  DESIGN-DAG-RUNNER.md  DESIGN-DECISIONS-CODEX.md  DESIGN-DECISIONS-GEMINI.md  DESIGN-LTGOV-BROKER.md  DESIGN-V2.md  DESIGN-YAPPER.md  DGOV_SYSTEM_PROMPT.md  DGOV_WORKER_INSTRUCTIONS.md  EXTRACTION_SUMMARY.md  GEMINI-SMOKE.md  GEMINI.md  (+273 more)
.claude/commands/: dgov-debrief.md  dgov-dispatch.md  dgov-handover.md
.dgov/: .gitignore  agents.toml  battle-test.toml  benchmarks.jsonl  final-repair.toml  governor.md  monitor-hooks.toml  poison-test.toml  project.toml  repair-test.toml  smoke-test.toml  state.db  test-mock.toml
.dgov-worker-hooks/: pre-merge-commit
.dgov/plans/: conflict-test.toml  deployed.jsonl  plan_docs.toml  test-dispatch.toml  worker-loop-soak-final.toml  worker-loop-soak-rerun.toml  worker-loop-soak.toml
.dgov/reports/: AUDIT-DONE-SIGNAL.md  AUDIT-INTERACTIVE.md  AUDIT-ROUTING.md  AUDIT-SPIM.md  audit-core-state.md  audit-dag-cli.md  audit-done-wait.md  audit-ui-ancillary.md  cursor-branch-audit.md
.dgov/sops/: architecture.md  code-review.md  error-handling.md  git-commits.md  knowledge-base.md  large-file-handling.md  project-extensions.md  python-style.md  refactoring-discipline.md  testing.md
.dgov/units/: k0-poem.toml  real-test-a.toml  real-test-b.toml  scale-test-a.toml
.gemini/: GEMINI.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.hypothesis/constants/: 02756d6a4c0fa27e  0593da998e883d52  0714003892c31dbb  0ade22e3e137ac0b  0d13cfdbe51fe7fc  0eab228cd90c90c3  0ec173fec78ed0de  12f433050cbf2c73  14b2f4937d642b7e  165892283c5ae89d  168073d9f8214ef2  16c6df77e5e52501  1c98e96b5ad651eb  2b17e0e63b50aed9  2dc4098117e84ca6  307d60cfe4aba805  326280f10a548e1e  33dd60cb225b146e  489a0a64617dc675  4e2f51d43c33b107  4f8cddf4c68359fc  5237d4f7c7c168c2  5dd7951eb343a0ca  5eed8c15fe886914  62af94b18d3577c8  6dcf18df1bdd1a3a  727facffe50a2f1f  73d3fd730f1cf46d  75b19934cfb5c3f2  806a26cb6908e5b5  8283cffbf2777588  84ac47c2df2ff880  8d13af2c695a938f  9406f19d6b7df999  94dbdd3594ea5f75  a0e83c1eb4c3f11e  a4bef902da2ae2ae  af28789c050c74af  b045397771d2e860  b170e769b3d6a6bf  (+14 more)
.sentrux/: baseline.json  current.json  dgov-baseline.json  rules.toml
benchmarks/hal/: README.md
dgov/: __init__.py  _dag_test_b.py  math_utils.py
docs/: PLAN.md  agent-authoring.md  agent-registry.md  architecture.md  batch-execution.md  cli-reference.md  configuration-files.md  conflict-resolution.md  core-concepts.md  dispatch-loop.md  eval-first-planning.md  experiment-tracking.md  hook-system.md  index.md  installation.md  package-lock.json  package.json  pane-lifecycle.md  plan-spec.md  policy-core.md  preflight-checks.md  prompt-templates.md  quick-start.md  review-fix-pipeline.md  state-and-events.md  troubleshooting.md  vocs.config.ts
docs/knowledge/: README.md  _index.md
docs/patches/: vocs+1.4.1.patch
reports/: composer-architecture.md  swarm-expansion-audit.md
scratch/: flat_files_test.txt
skills/dgov-governor/: SKILL.md
src/dgov/: __init__.py  _conflict_test.py  _dag_compat.py  _dag_test_a.py  _dag_test_b.py  _llm_compat.py  _nosquash.py  _tier_zero.py  _wide_1.py  _wide_2.py  actions.py  agent_skills.py  agents.py  api.py  archive.py  art.py  backend.py  batch.py  blame.py  bootstrap_policy.py  cli.py  config.py  context_packet.py  dag.py  dag_graph.py  dag_parser.py  dashboard.py  dashboard_v2.py  decision.py  (+75 more)
tests/: conftest.py  helpers.py  test_actions.py  test_admin.py  test_agent_guidance_files.py  test_agent_skills.py  test_alias_resolution.py  test_api.py  test_archive.py  test_backend.py  test_batch.py  test_batch_dag.py  test_blame.py  test_bootstrap_policy.py  test_boundaries.py  test_bounded_retry.py  test_cascade_close.py  test_circuit_breaker.py  test_clean_integration.py  test_cli.py  test_cli_admin.py  test_cli_agents.py  test_cli_clean.py  test_cli_compile.py  test_cli_diagnose.py  test_cli_fix.py  test_cli_kb.py  test_cli_ledger.py  test_cli_pane.py  test_cli_plan_create.py  test_cli_plan_list.py  test_cli_plan_review.py  test_cli_plan_status.py  test_cli_run_stream.py  test_cli_run_strict.py  test_cli_scope.py  test_cli_state.py  test_cli_tools.py  test_cli_verify.py  test_comms.py  (+127 more)
(+307 files in other folders)
