[project]
name = "dgov"
version = "0.0.1"
description = "Deterministic kernel for multi-agent orchestration via git worktrees."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "openai>=2.30.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ty>=0.0.1",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "hypothesis>=6.151.9",
]
docs = [
    "mkdocs-material>=9.0",
]

[project.scripts]
dgov = "dgov.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dgov"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: End-to-end lifecycle tests with real git repos",
]
