[project]
name = "dgov"
version = "0.1.0a1"
description = "Deterministic kernel for multi-agent orchestration via git worktrees."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "openai>=2.30.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ty>=0.0.1",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "hypothesis>=6.151.9",
]
docs = [
    "mkdocs-material>=9.0",
]

[project.scripts]
dgov = "dgov.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dgov"]

[tool.ruff]
line-length = 99
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W",  # Pycodestyle/Pyflakes
    "I",           # Isort
    "UP",          # Pyupgrade
    "B",           # Flake8-bugbear
    "SIM",         # Flake8-simplify
    "RUF",         # Ruff-specific
    "TID",         # Flake8-tidy-imports
    "PTH",         # Flake8-use-pathlib
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: End-to-end lifecycle tests with real git repos",
    "slow: Tests that take longer than typical unit tests",
]
# dgov dogfooded
