[project]
name = "dgov"
version = "0.1.0"
description = "Deterministic kernel for multi-agent orchestration via git worktrees."
readme = "README.md"
license = "MIT"
authors = [
    { name = "James H. Gearon", email = "jameshgrn@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.1",
    "openai>=2.30.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/jameshgrn/dgov"
Repository = "https://github.com/jameshgrn/dgov"
Issues = "https://github.com/jameshgrn/dgov/issues"

[project.scripts]
dgov = "dgov.cli:cli"

[dependency-groups]
dev = [
    "ty>=0.0.1",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "hypothesis>=6.151.9",
]
docs = [
    "mkdocs-material>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dgov"]

[tool.ruff]
line-length = 99
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W",  # Pycodestyle/Pyflakes
    "I",           # Isort
    "UP",          # Pyupgrade
    "B",           # Flake8-bugbear
    "SIM",         # Flake8-simplify
    "RUF",         # Ruff-specific
    "TID",         # Flake8-tidy-imports
    "PTH",         # Flake8-use-pathlib
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Worker prompt has intentionally long prose lines
"src/dgov/worker.py" = ["E501"]
# Compile warning messages are intentionally long
"src/dgov/plan.py" = ["E501"]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: End-to-end lifecycle tests with real git repos",
    "slow: Tests that take longer than typical unit tests",
]
